--- a/views/newsletter.jade
+++ b/views/newsletter.jade
@@ -8,7 +8,7 @@ include ./mixins/_color-panel
 
 doctype html
 include ./includes/_ie-conditional-comments
-+seo(title, description, page)
++seo(title, description, img, imgWidth, imgHeight, page)
 include ./includes/_head
   
   body(id= page)
