--- a/views/contact.jade
+++ b/views/contact.jade
@@ -5,7 +5,7 @@ include ./mixins/_header
 
 doctype html
 include ./includes/_ie-conditional-comments
-+seo(title, description, page)
++seo(title, description, image, page)
 include ./includes/_head
   
   body(id= page)
