--- a/views/work.jade
+++ b/views/work.jade
@@ -6,7 +6,7 @@ include ./mixins/_vimeo-player
 
 doctype html
 include ./includes/_ie-conditional-comments
-+seo(title, description, page)
++seo(title, description, img, imgWidth, imgHeight, page)
 include ./includes/_head
   
   body(id= page)
