add http: to og image url

--- a/views/mixins/_seo.jade
+++ b/views/mixins/_seo.jade
@@ -9,7 +9,7 @@ mixin seo(title, description, img, imgWidth, imgHeight, page)
           meta(property='og:title' content= contentful.index[0].meta.fields.seoTitle)
           meta(property='og:description', content= contentful.index[0].meta.fields.seoDescription)
           if (contentful.index[0].meta.fields.seoImage)
-            meta(property='og:image' content= contentful.index[0].meta.fields.seoImage.fields.file.url)
+            meta(property='og:image' content= 'https:' + contentful.index[0].meta.fields.seoImage.fields.file.url)
             meta(property='og:image:width' content= contentful.index[0].meta.fields.seoImage.fields.file.details.image.width)
             meta(property='og:image:height' content= contentful.index[0].meta.fields.seoImage.fields.file.details.image.height)
           else
@@ -20,7 +20,7 @@ mixin seo(title, description, img, imgWidth, imgHeight, page)
           meta(property='og:title' content= contentful.blog[0].meta.fields.seoTitle)
           meta(property='og:description', content= contentful.blog[0].meta.fields.seoDescription)
           if (contentful.blog[0].meta.fields.seoImage)
-            meta(property='og:image' content= contentful.blog[0].meta.fields.seoImage.fields.file.url)
+            meta(property='og:image' content= 'https:' + contentful.blog[0].meta.fields.seoImage.fields.file.url)
             meta(property='og:image:width' content= contentful.blog[0].meta.fields.seoImage.fields.file.details.image.width)
             meta(property='og:image:height' content= contentful.blog[0].meta.fields.seoImage.fields.file.details.image.height)
           else
@@ -31,7 +31,7 @@ mixin seo(title, description, img, imgWidth, imgHeight, page)
           meta(property='og:title' content= contentful.work[0].meta.fields.seoTitle)
           meta(property='og:description', content= contentful.work[0].meta.fields.seoDescription)
           if (contentful.blog[0].meta.fields.seoImage)
-            meta(property='og:image' content= contentful.work[0].meta.fields.seoImage.fields.file.url)
+            meta(property='og:image' content= 'https:' + contentful.work[0].meta.fields.seoImage.fields.file.url)
             meta(property='og:image:width' content= contentful.work[0].meta.fields.seoImage.fields.file.details.image.width)
             meta(property='og:image:height' content= contentful.work[0].meta.fields.seoImage.fields.file.details.image.height)
           else
@@ -42,7 +42,7 @@ mixin seo(title, description, img, imgWidth, imgHeight, page)
           meta(property='og:title' content= contentful.about[0].meta.fields.seoTitle)
           meta(property='og:description', content= contentful.about[0].meta.fields.seoDescription)
           if (contentful.blog[0].meta.fields.seoImage)
-            meta(property='og:image' content= contentful.about[0].meta.fields.seoImage.fields.file.url)
+            meta(property='og:image' content= 'https:' + contentful.about[0].meta.fields.seoImage.fields.file.url)
             meta(property='og:image:width' content= contentful.about[0].meta.fields.seoImage.fields.file.details.image.width)
             meta(property='og:image:height' content= contentful.about[0].meta.fields.seoImage.fields.file.details.image.height)
           else
@@ -53,7 +53,7 @@ mixin seo(title, description, img, imgWidth, imgHeight, page)
           meta(property='og:title' content= contentful.contact[0].meta.fields.seoTitle)
           meta(property='og:description', content= contentful.contact[0].meta.fields.seoDescription)
           if (contentful.blog[0].meta.fields.seoImage)
-            meta(property='og:image' content= contentful.contact[0].meta.fields.seoImage.fields.file.url)
+            meta(property='og:image' content= 'https:' + contentful.contact[0].meta.fields.seoImage.fields.file.url)
             meta(property='og:image:width' content= contentful.contact[0].meta.fields.seoImage.fields.file.details.image.width)
             meta(property='og:image:height' content= contentful.contact[0].meta.fields.seoImage.fields.file.details.image.height)
           else
@@ -64,7 +64,7 @@ mixin seo(title, description, img, imgWidth, imgHeight, page)
           meta(property='og:title' content= contentful.terms[0].meta.fields.seoTitle)
           meta(property='og:description', content= contentful.terms[0].meta.fields.seoDescription)
           if (contentful.blog[0].meta.fields.seoImage)
-            meta(property='og:image' content= contentful.terms[0].meta.fields.seoImage.fields.file.url)
+            meta(property='og:image' content= 'https:' + contentful.terms[0].meta.fields.seoImage.fields.file.url)
             meta(property='og:image:width' content= contentful.terms[0].meta.fields.seoImage.fields.file.details.image.width)
             meta(property='og:image:height' content= contentful.terms[0].meta.fields.seoImage.fields.file.details.image.height)
           else
@@ -75,7 +75,7 @@ mixin seo(title, description, img, imgWidth, imgHeight, page)
           meta(property='og:title' content= contentful.privacy[0].meta.fields.seoTitle)
           meta(property='og:description', content= contentful.privacy[0].meta.fields.seoDescription)
           if (contentful.blog[0].meta.fields.seoImage)
-            meta(property='og:image' content= contentful.privacy[0].meta.fields.seoImage.fields.file.url)
+            meta(property='og:image' content= 'https:' + contentful.privacy[0].meta.fields.seoImage.fields.file.url)
             meta(property='og:image:width' content= contentful.privacy[0].meta.fields.seoImage.fields.file.details.image.width)
             meta(property='og:image:height' content= contentful.privacy[0].meta.fields.seoImage.fields.file.details.image.height)
           else
@@ -86,7 +86,7 @@ mixin seo(title, description, img, imgWidth, imgHeight, page)
           meta(property='og:title' content= contentful.animation[0].meta.fields.seoTitle)
           meta(property='og:description', content= contentful.animation[0].meta.fields.seoDescription)
           if (contentful.blog[0].meta.fields.seoImage)
-            meta(property='og:image' content= contentful.animation[0].meta.fields.seoImage.fields.file.url)
+            meta(property='og:image' content= 'https:' + contentful.animation[0].meta.fields.seoImage.fields.file.url)
             meta(property='og:image:width' content= contentful.animation[0].meta.fields.seoImage.fields.file.details.image.width)
             meta(property='og:image:height' content= contentful.animation[0].meta.fields.seoImage.fields.file.details.image.height)
           else
@@ -97,7 +97,7 @@ mixin seo(title, description, img, imgWidth, imgHeight, page)
           meta(property='og:title' content= contentful.culture[0].meta.fields.seoTitle)
           meta(property='og:description', content= contentful.culture[0].meta.fields.seoDescription)
           if (contentful.blog[0].meta.fields.seoImage)
-            meta(property='og:image' content= contentful.culture[0].meta.fields.seoImage.fields.file.url)
+            meta(property='og:image' content= 'https:' + contentful.culture[0].meta.fields.seoImage.fields.file.url)
             meta(property='og:image:width' content= contentful.culture[0].meta.fields.seoImage.fields.file.details.image.width)
             meta(property='og:image:height' content= contentful.culture[0].meta.fields.seoImage.fields.file.details.image.height)
           else
@@ -108,7 +108,7 @@ mixin seo(title, description, img, imgWidth, imgHeight, page)
           meta(property='og:title' content= contentful.gear[0].meta.fields.seoTitle)
           meta(property='og:description', content= contentful.gear[0].meta.fields.seoDescription)
           if (contentful.blog[0].meta.fields.seoImage)
-            meta(property='og:image' content= contentful.gear[0].meta.fields.seoImage.fields.file.url)
+            meta(property='og:image' content= 'https:' + contentful.gear[0].meta.fields.seoImage.fields.file.url)
             meta(property='og:image:width' content= contentful.gear[0].meta.fields.seoImage.fields.file.details.image.width)
             meta(property='og:image:height' content= contentful.gear[0].meta.fields.seoImage.fields.file.details.image.height)
           else
@@ -119,7 +119,7 @@ mixin seo(title, description, img, imgWidth, imgHeight, page)
           meta(property='og:title' content= contentful.method[0].meta.fields.seoTitle)
           meta(property='og:description', content= contentful.method[0].meta.fields.seoDescription)
           if (contentful.blog[0].meta.fields.seoImage)
-            meta(property='og:image' content= contentful.method[0].meta.fields.seoImage.fields.file.url)
+            meta(property='og:image' content= 'https:' + contentful.method[0].meta.fields.seoImage.fields.file.url)
             meta(property='og:image:width' content= contentful.method[0].meta.fields.seoImage.fields.file.details.image.width)
             meta(property='og:image:height' content= contentful.method[0].meta.fields.seoImage.fields.file.details.image.height)
           else
@@ -130,7 +130,7 @@ mixin seo(title, description, img, imgWidth, imgHeight, page)
           meta(property='og:title' content= contentful.news[0].meta.fields.seoTitle)
           meta(property='og:description', content= contentful.news[0].meta.fields.seoDescription)
           if (contentful.blog[0].meta.fields.seoImage)
-            meta(property='og:image' content= contentful.news[0].meta.fields.seoImage.fields.file.url)
+            meta(property='og:image' content= 'https:' + contentful.news[0].meta.fields.seoImage.fields.file.url)
             meta(property='og:image:width' content= contentful.news[0].meta.fields.seoImage.fields.file.details.image.width)
             meta(property='og:image:height' content= contentful.news[0].meta.fields.seoImage.fields.file.details.image.height)
           else
@@ -141,7 +141,7 @@ mixin seo(title, description, img, imgWidth, imgHeight, page)
           meta(property='og:title' content= contentful.road[0].meta.fields.seoTitle)
           meta(property='og:description', content= contentful.road[0].meta.fields.seoDescription)
           if (contentful.blog[0].meta.fields.seoImage)
-            meta(property='og:image' content= contentful.road[0].meta.fields.seoImage.fields.file.url)
+            meta(property='og:image' content= 'https:' + contentful.road[0].meta.fields.seoImage.fields.file.url)
             meta(property='og:image:width' content= contentful.road[0].meta.fields.seoImage.fields.file.details.image.width)
             meta(property='og:image:height' content= contentful.road[0].meta.fields.seoImage.fields.file.details.image.height)
           else
@@ -152,7 +152,7 @@ mixin seo(title, description, img, imgWidth, imgHeight, page)
           meta(property='og:title' content= contentful.thanks[0].meta.fields.seoTitle)
           meta(property='og:description', content= contentful.thanks[0].meta.fields.seoDescription)
           if (contentful.blog[0].meta.fields.seoImage)
-            meta(property='og:image' content= contentful.thanks[0].meta.fields.seoImage.fields.file.url)
+            meta(property='og:image' content= 'https:' +contentful.thanks[0].meta.fields.seoImage.fields.file.url)
             meta(property='og:image:width' content= contentful.thanks[0].meta.fields.seoImage.fields.file.details.image.width)
             meta(property='og:image:height' content= contentful.thanks[0].meta.fields.seoImage.fields.file.details.image.height)
           else
@@ -162,6 +162,6 @@ mixin seo(title, description, img, imgWidth, imgHeight, page)
     meta(name='description', content= description)
     meta(property='og:title' content= title)
     meta(property='og:description', content= description)
-    meta(property='og:image' content= img)
+    meta(property='og:image' content= 'https:' + img)
     meta(property='og:image:width' content= imgWidth)
     meta(property='og:image:height' content= imgHeight)
