add meta tag for gsuite

--- a/views/includes/_head.jade
+++ b/views/includes/_head.jade
@@ -2,6 +2,7 @@ head
   meta(charset='utf8')
   meta(http-equiv='X-UA-Compatible', content='IE=edge, chrome=1')
   meta(name='viewport' content='width=device-width, initial-scale=1')
+  meta(name="google-site-verification" content="U86F6lM8kwmNpVHzvvAoLK8fuTs_J_68pjSxM5exSxA")
 
   script(src="//use.typekit.net/luy2fpy.js")
   script.
