add facebook-pixel tracking snippet

--- a/views/_layouts/_case-study.jade
+++ b/views/_layouts/_case-study.jade
@@ -26,3 +26,4 @@ include ../includes/_head
     .container
       include ../includes/_footer
   include ../includes/_social-icons.svg
+  include ../includes/_facebook-pixel
