--- a/views/_layouts/_default-no-page-wrap.jade
+++ b/views/_layouts/_default-no-page-wrap.jade
@@ -18,5 +18,6 @@ include ../includes/_head
     block footer
       .container
         include ../includes/_footer
-        include ../includes/_social-icons.svg
+    include ../includes/_social-icons.svg
+    include ../includes/_facebook-pixel
 
