--- a/views/_layouts/_default.jade
+++ b/views/_layouts/_default.jade
@@ -19,4 +19,5 @@ include ../includes/_head
     block footer
       .container
         include ../includes/_footer
-        include ../includes/_social-icons.svg
+    include ../includes/_social-icons.svg
+    include ../includes/_facebook-pixel
