--- a/views/_layouts/_video.jade
+++ b/views/_layouts/_video.jade
@@ -24,3 +24,4 @@ include ../includes/_head
     .container
       include ../includes/_footer
   include ../includes/_social-icons.svg
+  include ../includes/_facebook-pixel
