--- a/views/index.jade
+++ b/views/index.jade
@@ -134,7 +134,7 @@ block content
 
     section.contact
       .contact__hero
-        a.btn.contact__cta(href='/contact') contact us
+        a.btn.contact__cta(href='/contact') let's get started
         
     script(src='/js/media-player.js' type='text/javascript')
     script(src='/js/process-graphic.js' type='text/javascript')
