--- a/views/index.jade
+++ b/views/index.jade
@@ -13,10 +13,11 @@ block content
           muted
           class='bgvid'
         )
+          <!-- make this content managed -->
           <!-- HD 720p (1280x720 / 4MB) = profile 113 -->
           <!-- HD 1080p (1920x1080 / 10MB) = profile 119 -->
           source(
-              src='https://player.vimeo.com/external/275307465.hd.mp4?s=d71b00bcce5febe3e6df7e17b12da2f04275ed81&profile_id=175'
+              src='https://player.vimeo.com/external/358109973.hd.mp4?s=0028ed6159a026b84cc34eed6b6160d336c29429&profile_id=175'
               type='video/mp4'
           )
   .span.scrolltomain
@@ -138,3 +139,5 @@ block content
         
     script(src='/js/media-player.js' type='text/javascript')
     script(src='/js/process-graphic.js' type='text/javascript')
+    script(type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false")
+    script(type="text/javascript" src="/js/mailchimp-popup.js")
