--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -396,6 +396,7 @@ main {
 
         @media screen and (max-width: 484px) {
           height: 8rem;
+          margin-bottom: 1rem;
           padding: 0 .5rem;
           width: 8rem;
         }
