--- a/assets/css/_about.scss
+++ b/assets/css/_about.scss
@@ -23,7 +23,7 @@
   }
 
   .profile {
-    margin-bottom: 10px;
+    margin-bottom: 50px;
     @media (max-width: $screen-xs-max) {
       margin-bottom: 100px;
       img {
@@ -39,6 +39,10 @@
   h2.name {
     font: 800 1.3em $font-family-base;
     margin-bottom: 5px;
+
+    @media (min-width: $screen-sm-max) {
+      margin-top: 0;
+    }
   }
 
   h3.title {
