--- a/views/contact.jade
+++ b/views/contact.jade
@@ -2,6 +2,7 @@
 include ./mixins/_seo
 include ./mixins/_nav
 include ./mixins/_header
+include ./mixins/_page-hero
 
 doctype html
 include ./includes/_ie-conditional-comments
@@ -18,7 +19,8 @@ include ./includes/_head
       )
         +nav(page)
         +header('yellow')
-        include ./includes/_page-head
+        +pageHero('contact')
+
     #content
       .container
         .row
