--- a/views/contact.jade
+++ b/views/contact.jade
@@ -40,7 +40,7 @@ include ./includes/_head
               p
                 span(itemprop='telephone')
                 br
-                a(href='mailto:info@earlylightmedia.com', itemprop='email') info@earlylightmedia.com
+                a(href='mailto:nkeser@earlylightmedia.com', itemprop='email') nkeser@earlylightmedia.com
             h3 Let's talk.
             form(action='//formspree.io/info@earlylightmedia.com', method='POST', autocomplete='on')
               .form-group
