add image lazy loading

--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -601,7 +601,7 @@ main {
 
     .contact__hero {
       align-items: flex-end;
-      background: url(/img/DSC5475.jpg) no-repeat center center;
+      // background: url(/img/DSC5475.jpg) no-repeat center center;
       background-size: cover;
       display: flex;
       height: 50vh;
