--- a/views/blog.jade
+++ b/views/blog.jade
@@ -44,4 +44,5 @@ block content
       +cn-nav()
 block append footer
   script(src="/js/cn-nav-custom.js")
+  script(src='/js/intersectionObserver.js' type='text/javascript' defer='true')
 
