remove Nikki's email, update copy

--- a/views/contact.jade
+++ b/views/contact.jade
@@ -40,8 +40,7 @@ include ./includes/_head
               p
                 span(itemprop='telephone')
                 br
-                a(href='mailto:nkeser@earlylightmedia.com', itemprop='email') nkeser@earlylightmedia.com
-            h3 Let's talk.
+            h3 Let's Start Producing
             form(action='//formspree.io/info@earlylightmedia.com', method='POST', autocomplete='on')
               .form-group
                 label.sr-only(for='name') Name
