--- a/views/404.jade
+++ b/views/404.jade
@@ -12,6 +12,7 @@ include ./includes/_ie-conditional-comments
 include ./includes/_head
   
   body(id='p' + page)
+    include ./includes/_gtm-body
     +nav()
     +header('white')
     .container
