--- a/views/_layouts/_case-study.jade
+++ b/views/_layouts/_case-study.jade
@@ -8,6 +8,7 @@ include ../includes/_ie-conditional-comments
 include ../includes/_head
   
   body(id='case-study')
+    include ../includes/_gtm-body
     .master-wrapper
       div(
         class='master parallax'
