--- a/views/_layouts/_default-no-page-wrap.jade
+++ b/views/_layouts/_default-no-page-wrap.jade
@@ -9,6 +9,7 @@ include ../includes/_ie-conditional-comments
 include ../includes/_head
 
   body(id= page)
+    include ../includes/_gtm-body
     +nav(page)
     block header
       +header('yellow')
