--- a/views/_layouts/_default.jade
+++ b/views/_layouts/_default.jade
@@ -9,6 +9,7 @@ include ../includes/_ie-conditional-comments
 include ../includes/_head
 
   body(id= page)
+    include ../includes/_gtm-body
     +nav(page)
     .page-wrapper
       block header
