--- a/views/_layouts/_post.jade
+++ b/views/_layouts/_post.jade
@@ -9,7 +9,7 @@ include ../includes/_ie-conditional-comments
 include ../includes/_head
   
   body(id='post')
-  
+    include ../includes/_gtm-body
     .master-wrapper
       div(
         class='master parallax'
