--- a/views/_layouts/_video.jade
+++ b/views/_layouts/_video.jade
@@ -9,6 +9,7 @@ include ../includes/_ie-conditional-comments
 include ../includes/_head
   
   body(id='video')
+    include ../includes/_gtm-body
     +nav('video')
     +header('yellow')
     .container.single-video
