--- a/views/about.jade
+++ b/views/about.jade
@@ -11,7 +11,7 @@ include ./includes/_ie-conditional-comments
 include ./includes/_head
   
   body(id= page)
-  
+    include ./includes/_gtm-body
     .master-wrapper
       div(
         class='master parallax'
