--- a/views/contact.jade
+++ b/views/contact.jade
@@ -10,7 +10,7 @@ include ./includes/_ie-conditional-comments
 include ./includes/_head
   
   body(id= page)
-  
+    include ./includes/_gtm-body
     .master-wrapper
       div(
         class='master parallax'
