--- a/views/includes/_head.jade
+++ b/views/includes/_head.jade
@@ -19,3 +19,4 @@ head
   script(src="/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js")
   script(src="//cdnjs.cloudflare.com/ajax/libs/jquery.isotope/2.2.1/isotope.pkgd.min.js")
   script(src="/js/filter.js")
+  include ../includes/_gtm-head
