--- a/views/thanks.jade
+++ b/views/thanks.jade
@@ -16,6 +16,7 @@ include ./includes/_ie-conditional-comments
 include ./includes/_head
   
   body(id= page)
+    include ./includes/_gtm-body
     +nav('thanks')
     +header('yellow')
     .container
