--- a/views/work.jade
+++ b/views/work.jade
@@ -10,6 +10,7 @@ include ./includes/_ie-conditional-comments
 include ./includes/_head
   
   body(id= page)
+    include ./includes/_gtm-body
     +nav(page)
     +header('yellow')
     .container
